--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,71 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+
+
+.header {
+  background-color: white;
+  height: 92px;
+ width: 100vw;
+ padding: 10px;
+align-content: center;
+}
+
+.sidebar {
+  height: 100%;
+  width: 178px;
+  background-color: white;
+  display: flex;
+  flex-direction:column;
   text-align: center;
+row-gap: 20px;
+padding: 10px;
+
+
+}
+
+.body {
+ 
+width:100%;
+  height: 100%;
+  background-color: white;
+  text-align: center;
+  padding: 10px;
+  display: flex;
+flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  
+  
+}
+
+.title_text{
+  color: white;
+}
+.basic_text{
+  color: white;
+}
+
+.maindiv{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.bodydiv{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction:row;
+ 
+}
+
+.categoryCard{
+  margin: 10px;
+  padding: 10px;
+ height: 30%;
+ width: 30%;
+ border: 3px black; 
+ border-style:solid;
+ border-radius: 10%;
 }
 
