--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,28 @@ flex-direction: row;
  border-radius: 10%;
 }
 
+.productCards{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border: 3px, solid, black;
+
+  
+}
+.productCards > div {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ border: 1px;
+ border-style: solid;
+ margin: 10px;
+ border-color: blue;
+ border-radius: 5px;
+ padding: 10px;
+}
+
+
+.productImages{
+  width: 100px;
+  height: 100px;
+}
